--- a/rawhtml/rawhtml.css
+++ b/rawhtml/rawhtml.css
@@ -1,13 +1,18 @@
 body {
     background-color: #162344;
     font-family:"Trebuchet MS";
-    color: white;
     text-align: center;
   }
   
   h1
   {
     font-size: 36px;
+  }
+
+  h1, h2, h3, h4, p
+  {
+    color: white;
+    margin: 5px;
   }
   
   code {
@@ -17,5 +22,71 @@ body {
   
   #map
   {
-    height: 800px;
+    height: 98vh;
+    z-index: 0;
+  }
+
+  #guessarea
+  {
+    width: 80%;
+    font-size: 40px;
+  }
+
+  #enter
+  {
+    width: 70%;
+    font-size: 24px;
+    text-align: center;
+  }
+
+  #guess
+  {
+    font-size: 24px;
+    color: #162344;
+    background-color: white;
+  }
+
+  #states
+  {
+    font-size: 24px;
+  }
+
+
+  #h
+  {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    background-color: #16234477;
+  }
+
+  #counter
+  {
+    z-index: 2;
+    height: 30%;
+    width: 300px;
+    position: fixed; 
+    bottom:0%; 
+    background-color: #ffffff77; 
+    border-top: 5px solid black;
+    border-right: 5px solid black;
+    overflow-y: auto;
+
+  }
+
+  #guesses
+  {
+    color: black;
+    width: 100%;
+  }
+
+  #guesses tr td
+  {
+    text-overflow: ellipsis;
+    color: black;
+  }
+
+  #tr0
+  {
+    font-weight: bold;
   }
