--- a/rawhtml.css
+++ b/rawhtml.css
@@ -35,15 +35,11 @@ body {
     left: 0;
   }
 
-  #guessarea
-  {
-    width: 80%;
-    font-size: 40px;
-  }
-
   #enter
   {
-    width: 70%;
+    width: 50%;
+    min-width: 300px;
+    max-width: 600px;
     font-size: 24px;
     text-align: center;
     font-family: 'Trebuchet MS';
